<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
 
    <EditText
        android:id="@+id/sessionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/sessionNameHint" />
    
     <EditText
        android:id="@+id/sessionPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/sessionPswHint" />
    
    
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        
        <Button
            android:id="@+id/configOK"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/configCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    
</LinearLayout>
</LinearLayout>
